--- a/public/views/index.html
+++ b/public/views/index.html
@@ -31,7 +31,7 @@
 
     <nav>
       <ul>
-        <li><a href="#chord_names">Bridge</a></li>
+        <li class="logo"><a href="#chord_names"><span class="full">Br <span class="logo-i">|</span> <span class="logo-i">|</span> <span class="logo-i">|</span> <span class="logo-i">|</span> <span class="logo-i">|</span> <span class="logo-i">|</span>dge</span></a></li>
         <li><a href="#chord_names">Chord Names</a></li>
         <li><a href="#recommendations">Recommendations</a></li>
       </ul>
