--- a/public/styles/scss/index.scss
+++ b/public/styles/scss/index.scss
@@ -1,6 +1,7 @@
 @import "bourbon/bourbon";
 @import "base";
 @import "nav";
+@import "home";
 @import "chord_charts";
 @import "media_queries";
 @import "chord_names";
