--- a/public/views/templates/recommendations.html
+++ b/public/views/templates/recommendations.html
@@ -15,8 +15,9 @@
   <!--  -->
 
 </div>
-<h1>To play in <span class="">{{selectedAllKey.Key}}</span>, use the open chords in <span class="">{{selectedKey}}</span> with the capo on <span class="">{{capo}}</span>. </h1>
-
+<div class="info">
+  <h1>To play in <span class="">{{selectedAllKey.Key}}</span>, use the open chords in <span class="">{{selectedKey}}</span> with the capo on <span class="">{{capo}}</span>. </h1>
+</div>
 <div class="row chords">
   <div class="chord-card clearfix">
     <h4 class="numeral major"> I </h4>
