--- a/public/styles/scss/_variables.scss
+++ b/public/styles/scss/_variables.scss
@@ -1,10 +1,10 @@
 
 //colors
-$black: #222;
+$black: #111;
 $white: #fff;
 $light-gray: #ddd;
 $grey: #666;
-$green: hsl(164, 81%, 45%);
+$green: hsla(167,83%,45%,1);
 $red: hsl(345, 95%, 24%);
 $purple: hsl(271, 88%, 79%);
 
