--- a/public/styles/scss/index.scss
+++ b/public/styles/scss/index.scss
@@ -1,8 +1,10 @@
+
 @import "bourbon/bourbon";
+@import "variables";
 @import "base";
 @import "nav";
 @import "home";
 @import "chord_charts";
 @import "media_queries";
-@import "chord_names";
 @import "recommendations";
+@import "chord_names";
