--- a/public/views/index.html
+++ b/public/views/index.html
@@ -32,7 +32,7 @@
       <nav>
         <ul>
           <li class="logo"><a href="#home"><span class="full">Br <span class="logo-i">|</span> <span class="logo-i">|</span> <span class="logo-i">|</span> <span class="logo-i">|</span> <span class="logo-i">|</span> <span class="logo-i">|</span>dge</span></a></li>
-          <li><a href="#chord_names">Chord Names</a></li>
+          <li><a href="#chord_names">Transposer</a></li>
           <li><a href="#recommendations">Recommendations</a></li>
         </ul>
       </nav>
