--- a/public/views/templates/chord_names.html
+++ b/public/views/templates/chord_names.html
@@ -1,4 +1,7 @@
-<div class="selectors">
+<div class="background-two">
+</div>
+
+<div class="content"><div class="selectors">
 
 
   <form class="form-inline chord-form">
@@ -19,8 +22,8 @@
 </div>
 
 <div class="info">
-  <h1>Open Chords in the key of {{selectedKey}}. </h1>
-  <h1>With a Capo on {{capoPosition}}, you are now playing in {{newKey[0]}}. </h1>
+  <h1>Open Chords in the key of {{selectedKey}}. <br>
+  With a Capo on {{capoPosition}}, you are now playing in {{newKey[0]}}. </h1>
 </div>
 <div class="row chords">
 
@@ -65,4 +68,5 @@
     <svg class="chord" id="7"></svg>
     <h4 class="transposed"> {{newKey[6]}} </h4>
   </div>
+</div>
 </div>
