--- a/public/views/templates/home.html
+++ b/public/views/templates/home.html
@@ -1,8 +1,16 @@
 <div class="home-background">
+</div>
+  <div>
+  <div class="home-hero" id="one">
+    <h1>Welcome to bridge, the app that makes playing with a capo easy.</h1>
+  </div>
+  <div class="home-hero" id="two">
+    <h1>Bridge allows you to play in different keys, and use different chord voicings without memorizing note names.</h1>
+  </div>
+</div>
+<div class="home-hero" id="three">
+</div>
 
-</div>
-<div class="info home-hero" id="one">
-  <h1>Welcome to bridge, the app that makes playing with a capo easy.</h1></div>
-<div class="info home-hero" id="two">
-  <h1>Bridge takes the work out of transposing chords, allowing you to unleash your creativity by playing in different keys.</h1>
-</div>
+
+<h1 class="three">Get started by using <a href="#recommendations" class="link-1">recommendations</a> to find new ways to play your favorite songs.</br></br>
+  Or, do some research using the <a href="#chord_names" class="link-2">transposer.</a></h1>
