--- a/public/styles/scss/_home.scss
+++ b/public/styles/scss/_home.scss
@@ -2,6 +2,7 @@
     background: url("../../images/guitar-1.jpeg"), no-repeat center center, #222;
     background-blend-mode: soft-light;
     background-size: cover;
+    @include filter(grayscale(100%));
     position: fixed;
     top: 0;
     height: 100%;
@@ -13,25 +14,76 @@
 .home-hero {
   font-family: $league;
   text-transform: uppercase;
-  height: 40vh;
   position: relative;
-  margin-top: 100vh;
   z-index: 10;
-  background-color: $white;
-  color: $black;
+  color: $white;
   width: 100%;
   h1{
     padding: 0 10%;
     font-size: 5.5rem;
     line-height: .9;
+    position: absolute;
+    top: 40vh;
   }
 }
 
 #one {
-  margin: 43vh 0 17vh 0;
+  height: 100vh;
   background-color: transparent;
   color: $white;
+  h1 {
+    padding: 0 20%;
+  }
 }
 #two {
-  
+  background: #222;
+  mix-blend-mode: screen;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  color: $green;
+  h1{
+    top: 35vh;
+  }
+
+}
+
+#three {
+  background: url("../../images/guitar-2.jpg"), no-repeat center center, #222;
+  background-blend-mode: multiply;
+  mix-blend-mode: screen;
+  background-size: cover;
+  @include filter(grayscale(100%));
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  // color: $red;
+
+
+
+}
+
+.three {
+  font-family: $league;
+  text-transform: uppercase;
+  position: relative;
+    padding: 0 10%;
+    font-size: 5.5rem;
+    line-height: .9;
+    bottom: 100vh;
+    z-index: 10;
+    height: 100vh;
+    margin-top: 0;
+    padding-top: 36vh;
+
+    a{
+    @include transition(.15s);
+    }
+
+    .link-1:hover{
+      color: $red;
+    }
+    .link-2:hover{
+      color: $green;
+    }
 }
