--- a/public/styles/scss/_recommendations.scss
+++ b/public/styles/scss/_recommendations.scss
@@ -1,1 +1,17 @@
+.background-one {
+  background: url("../../images/guitar-1.jpeg"), no-repeat center center, #222;
+  background-blend-mode: soft-light;
+  background-size: cover;
+  @include filter(grayscale(100%));
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 1;
+}
 
+.content {
+  position: relative;
+  z-index: 5;
+  margin-top: 0;
+}
