--- a/public/views/templates/home.html
+++ b/public/views/templates/home.html
@@ -9,8 +9,14 @@
   </div>
 </div>
 <div class="home-hero" id="three">
+
+
 </div>
 
 
 <h1 class="three">Get started by using <a href="#recommendations" class="link-1">recommendations</a> to find new ways to play your favorite songs.</br></br>
   Or, do some research using the <a href="#chord_names" class="link-2">transposer.</a></h1>
+
+  <p class="credits">
+    &copy Andy Fehrenbach 2016. Credits: <a href="http://chordography.blogspot.com/"> Chordography Script</a> by Clive Grant. Photography by <a href="https://www.pexels.com/u/aaronsvd/">Harvey Salvador</a>.
+  </p>
