--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -268,6 +268,14 @@ a {
   .three .link-2:hover {
     color: #14d2a9; }
 
+.credits {
+  position: absolute;
+  z-index: 100;
+  bottom: -215vh;
+  padding-left: 2em; }
+  .credits a {
+    text-decoration: underline; }
+
 svg.chordChart .grid {
   stroke: #fff;
   stroke-width: .15rem; }
