--- a/public/styles/css/index.css
+++ b/public/styles/css/index.css
@@ -89,7 +89,8 @@ h1 {
   -ms-flex: 1;
   flex: 1;
   height: 100%;
-  padding: 0 .5rem; }
+  padding: 0 .5rem;
+  position: relative; }
 
 .chord {
   width: 100%;
@@ -108,7 +109,8 @@ h4 {
   padding: .4em .5em;
   position: absolute;
   bottom: 0;
-  width: 12%; }
+  left: 8%;
+  width: 85%; }
 
 .numeral {
   width: 90%;
