copy change on landing page.

--- a/public/views/templates/home.html
+++ b/public/views/templates/home.html
@@ -2,7 +2,7 @@
 </div>
   <div>
   <div class="home-hero" id="one">
-    <h1>Welcome to bridge, the app that makes playing with a capo easy.</h1>
+    <h1>Welcome to bridge, the app that simplifies playing guitar with a capo.</h1>
   </div>
   <div class="home-hero" id="two">
     <h1>Bridge allows you to play in different keys, and use different chord voicings without memorizing note names.</h1>
