--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Bridge</title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="/vendors/angular.min.js"></script>
   <script type="text/javascript" src="/vendors/angular-route.min.js"></script>
